# sdk-python

./: README.md  langgraph.json  pyproject.toml
coagents/: demo.py
coagents/copilotkit/: __init__.py  action.py  agent.py  exc.py  langchain.py  parameter.py  sdk.py  state.py
coagents/copilotkit/integrations/: fastapi.py
coagents/demos/autotale_ai/: agent.py  chatbot.py  state.py
coagents/demos/autotale_ai/story/: characters.py  outline.py  story.py  style.py
coagents/old/: copilotkit.py  demo.py  demo_stateless_step_1.py  demo_stateless_step_2.py  graph.py
copilotkit/: __init__.py  action.py  agent.py  demo.py  langchain.py  langgraph_agent.py  parameter.py  sdk.py  types.py
copilotkit/demos/ai_researcher/: steps.py  summarize.py
copilotkit/demos/autotale_ai/: agent.py  chatbot.py  demo.py
copilotkit/demos/multi_agent/: demo.py  email_agent.py  joke_agent.py
copilotkit/demos/qa/: agent.py
copilotkit/demos/research_canvas/: agent.py  chat.py  delete.py  demo.py  search.py
copilotkit/demos/starter/: agent.py  demo.py
copilotkit/integrations/: fastapi.py
