[tool.poetry]
name = "copilotkit"
version = "0.1.0"
description = ""
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.3"
httpx = "^0.27.0"
fastapi = "^0.111.1"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
partialjson = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "copilotkit.demo:main"
