[tool.poetry]
name = "copilotkit"
version = "0.1.15"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/sdk-python"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langgraph = "^0.2.3"
httpx = "^0.27.0"
fastapi = ">=0.90.1"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
partialjson = "^0.0.8"
langchain-community = "^0.2.15"
langgraph-sdk = "^0.1.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "copilotkit.demos.starter.demo:main"
